--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="hangman game">
     <meta name="keywords" content="html, css, javascript, hangman, game, hangman-game, learning">
     <title>HangMan</title>
-    <link rel="stylesheet" href="./styles/style.css" type="text/css">
-    <script type="module" src="./scripts/script.js" defer></script>
+    <link rel="stylesheet" href="/styles/style.css" type="text/css">
+    <script type="module" src="/scripts/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&family=PT+Sans&display=swap" rel="stylesheet">
