Fixed TriesBar Animation
Changed the approach to a single cover box

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </head>
   <body>
     <main>
-        <div class="tries"></div>
+        <div class="tries">
+          <div></div>
+        </div>
         <div class="main">
             <h2>Guess a letter</h2>
             <p class="word">temp</p>
