--- a/index.html
+++ b/index.html
@@ -32,5 +32,16 @@
             <p></p>
         </div>
     </main>
+    <div class="menu">
+        <div class="buttons">
+          <button>Easy</button>
+          <button>Medium</button>
+          <button>Hard</button>
+        </div>
+        <p>Will be appplied on next turn</p>
+      <div class="opener">
+        <img src="./res/opener.svg" alt="Down arrow">
+      </div>
+    </div>
   </body>
 </html>
