--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
           <button>Hard</button>
         </div>
         <p>Will be appplied on next turn</p>
-      <div class="opener">
-        <img src="./res/opener.svg" alt="Down arrow">
-      </div>
+        <svg class="opener" height="16" width="32"><polygon points="0,0 32,0 16,16"/></svg>
     </div>
   </body>
 </html>
