--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="used">
             <p></p>
         </div>
+        <div class="level">Level: <span>Medium</span></div>
     </main>
     <div class="menu">
         <div class="buttons">
